<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Wars!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Does Nothing</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="fire">FIRE!!</string>
    <string name="next">Begin</string>

</resources>
