<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/offdark">

    <net.bitcraftlabs.SpaceWars.SpaceWars
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:background="@color/dark"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:id="@+id/leftBtn"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/downBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:id="@+id/rightBtn"
        android:layout_below="@+id/upBtn"
        android:layout_toRightOf="@+id/downBtn"
        android:layout_toEndOf="@+id/downBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"
        android:id="@+id/downBtn"
        android:layout_alignTop="@+id/leftBtn"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:id="@+id/upBtn"
        android:layout_above="@+id/downBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fire"
        android:id="@+id/fireBtn"
        android:layout_alignTop="@+id/upBtn"
        android:layout_toRightOf="@+id/rightBtn"
        android:layout_toEndOf="@+id/rightBtn" />

</RelativeLayout>
